Work on debugging analysis2.4 by plotting reconstructed images

--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -2,16 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9b491d61-c4b6-4039-88b8-eb13c342b923",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a910b33c-ca35-4b01-9c4f-418548c0b8a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Debugging: Plotting images for k=1 and k=2\n",
     "\n",
-    "# Next steps: \n",
-    "# 1. Probably want to compute the RMSE of the 201 data points for each value of k and plot those "
+    "# Ranking FFT frequencies based on absolute value (sqrt(a^2+b^2))\n",
+    "\n",
+    "phi = np.load(\"Phi_201snap.npy\")\n",
+    "df = pd.DataFrame()\n",
+    "i = 160\n",
+    "my_dpi = 192\n",
+    "\n",
+    "# Define values for k\n",
+    "k_values = [1, 2]\n",
+    "data = phi[:,:,i]\n",
+    "\n",
+    "plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
+    "plt.imshow(data, cmap='gray')\n",
+    "plt.axis(\"off\")\n",
+    "plt.savefig('2.4.png', bbox_inches='tight', pad_inches=0)\n",
+    "plt.close()\n",
+    "\n",
+    "# Compute 1D (in r) and 2D FFT's\n",
+    "fft = np.fft.fft(data, axis=0)\n",
+    "fft2 = np.fft.fft2(data)\n",
+    "\n",
+    "for k in k_values:\n",
+    "    \n",
+    "    # 1D\n",
+    "    # Sort fft by absolute value in descending order\n",
+    "    fft_sorted = np.sort(np.abs(fft.reshape(-1)))[::-1]\n",
+    "    \n",
+    "    # Take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
+    "    threshold = fft_sorted[k]\n",
+    "    mask = np.abs(fft)>threshold\n",
+    "    masked = fft * mask\n",
+    "\n",
+    "    # Reconstruct the data from masked using inverse FFT\n",
+    "    newdata = np.fft.ifft(masked).real\n",
+    "\n",
+    "    # 2D\n",
+    "    # Sort fft by absolute value in descending order\n",
+    "    fft2_sorted = np.sort(np.abs(fft2.reshape(-1)))[::-1]\n",
+    "\n",
+    "    # Take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
+    "    threshold2 = fft2_sorted[k]\n",
+    "    mask2 = np.abs(fft2)>threshold2\n",
+    "    masked2 = fft2 * mask2\n",
+    "    \n",
+    "    # Reconstruct the data from masked2 using inverse FFT2\n",
+    "    newdata2 = np.fft.ifft2(masked2).real\n",
+    "\n",
+    "    plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
+    "    plt.imshow(newdata2, cmap='gray')\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.savefig('2.4new.png', bbox_inches='tight', pad_inches=0)\n",
+    "    plt.close()"
    ]
   },
   {
@@ -380,59 +441,6 @@
     "        \n",
     "df.to_pickle(\"analysis2.4.pkl\")\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a910b33c-ca35-4b01-9c4f-418548c0b8a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3.6993867467299997+3.122502256758253e-17j)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Next steps: \n",
-    "# 1. Figure out the dimensions of the returned FFT objects, why do they match original dimensions if they do?\n",
-    "# 2. Are the frequencies already arranged in order of magnitude? Try to compare the magnitudes. \n",
-    "# --- And how should we compare the magnitudes, by real part or by absolute value? (Answer: try both and see which one is better)\n",
-    "\n",
-    "# REDO WITH JUST ONE OF THE 201 IMAGES\n",
-    "\n",
-    "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(index=np.arange(201))\n",
-    "\n",
-    "# Define values for k\n",
-    "k_values = [1, 2, 5, 10, 20, 50, 75, 100]\n",
-    "\n",
-    "data = phi[:,:,160]\n",
-    "\n",
-    "# Compute 1D (in r) and 2D FFT's\n",
-    "# First do 1D FFT and sort by absolute value in descending order\n",
-    "fft = np.fft.fft(data, axis=0)\n",
-    "fft_sorted = np.sort(np.abs(fft.reshape(-1)))[::-1]\n",
-    "\n",
-    "# Iterate over different k and take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
-    "for k in k_values:\n",
-    "    threshold = fft_sorted[k]\n",
-    "    mask = np.abs(fft)>threshold\n",
-    "    masked = fft * mask\n",
-    "\n",
-    "    # Compute iFFT and resulting RMSE\n",
-    "    newdata = np.fft.ifft(masked).real\n",
-    "    break\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "# See the code from the youtube video "
    ]
   },
   {
