--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -14,65 +14,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a910b33c-ca35-4b01-9c4f-418548c0b8a5",
+   "execution_count": 44,
+   "id": "c57414f2-bc9d-493e-a5dc-742b0d076a0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.39825617 0.03417803 0.88805997 0.59994022]\n",
+      " [0.21975691 0.43500877 0.55816588 0.26316725]\n",
+      " [0.00298751 0.97688394 0.9367734  0.51641562]\n",
+      " [0.74830086 0.97405425 0.34134296 0.61977852]]\n",
+      "[[0.02677733 0.79466031 0.48699922 0.74794954]]\n",
+      "[[ True False  True False]\n",
+      " [ True False  True False]\n",
+      " [False  True  True False]\n",
+      " [ True  True False False]]\n",
+      "[[0.39825617 0.         0.88805997 0.        ]\n",
+      " [0.21975691 0.         0.55816588 0.        ]\n",
+      " [0.         0.97688394 0.9367734  0.        ]\n",
+      " [0.74830086 0.97405425 0.         0.        ]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Debugging: Plotting images for k=1 and k=2\n",
+    "# Testing\n",
+    "# test = np.random.rand(3, 3)\n",
+    "# sort = np.sort(test, axis=1)\n",
+    "# sortflipped = np.flip(sort, axis=1)\n",
+    "# print(test)\n",
+    "# print(sort)\n",
+    "# print(sortflipped)\n",
     "\n",
-    "# Ranking FFT frequencies based on absolute value (sqrt(a^2+b^2))\n",
-    "\n",
-    "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame()\n",
-    "i = 160\n",
-    "my_dpi = 192\n",
-    "\n",
-    "# Define values for k\n",
-    "k_values = [1, 2]\n",
-    "data = phi[:,:,i]\n",
-    "\n",
-    "plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
-    "plt.imshow(data, cmap='gray')\n",
-    "plt.axis(\"off\")\n",
-    "plt.savefig('2.4.png', bbox_inches='tight', pad_inches=0)\n",
-    "plt.close()\n",
-    "\n",
-    "# Compute 1D (in r) and 2D FFT's\n",
-    "fft = np.fft.fft(data, axis=0)\n",
-    "fft2 = np.fft.fft2(data)\n",
-    "\n",
-    "for k in k_values:\n",
-    "    \n",
-    "    # 1D\n",
-    "    # Sort fft by absolute value in descending order\n",
-    "    fft_sorted = np.sort(np.abs(fft.reshape(-1)))[::-1]\n",
-    "    \n",
-    "    # Take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
-    "    threshold = fft_sorted[k]\n",
-    "    mask = np.abs(fft)>threshold\n",
-    "    masked = fft * mask\n",
-    "\n",
-    "    # Reconstruct the data from masked using inverse FFT\n",
-    "    newdata = np.fft.ifft(masked).real\n",
-    "\n",
-    "    # 2D\n",
-    "    # Sort fft by absolute value in descending order\n",
-    "    fft2_sorted = np.sort(np.abs(fft2.reshape(-1)))[::-1]\n",
-    "\n",
-    "    # Take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
-    "    threshold2 = fft2_sorted[k]\n",
-    "    mask2 = np.abs(fft2)>threshold2\n",
-    "    masked2 = fft2 * mask2\n",
-    "    \n",
-    "    # Reconstruct the data from masked2 using inverse FFT2\n",
-    "    newdata2 = np.fft.ifft2(masked2).real\n",
-    "\n",
-    "    plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
-    "    plt.imshow(newdata2, cmap='gray')\n",
-    "    plt.axis(\"off\")\n",
-    "    plt.savefig('2.4new.png', bbox_inches='tight', pad_inches=0)\n",
-    "    plt.close()"
+    "test = np.random.rand(4, 4)\n",
+    "threshold = np.random.rand(1, 4)\n",
+    "mask = test>threshold\n",
+    "masked = test*mask\n",
+    "print(test)\n",
+    "print(threshold)\n",
+    "print(mask)\n",
+    "print(masked)\n",
+    "test.shape[0]"
    ]
   },
   {
@@ -186,40 +179,59 @@
     "k_values = [1, 2, 5, 10, 20, 50, 75, 100]\n",
     "\n",
     "for k in k_values:\n",
-    "    sum_of_squares1D, sum_of_squares2D = 0, 0\n",
-    "    max1D, min1D, max2D, min2D = -1000, 1000, -1000, 1000\n",
+    "\n",
+    "    # Compute 1D FFTs (one along r and one along z)\n",
+    "    for ax in range(2):\n",
+    "        max1D, min1D = -1000, 1000\n",
+    "        sum_of_squares1D = 0\n",
+    "        \n",
+    "        for i in range(201):\n",
+    "            data = phi[:,:,i]\n",
+    "            fft = np.fft.fft(data, axis=ax)\n",
+    "\n",
+    "            # Sort array by row by absolute value in descending order\n",
+    "            fft_sorted = np.flip(np.sort(np.abs(fft), axis=ax), axis=ax)\n",
+    "\n",
+    "            # Take the top k frequencies from each row/col of fft_sorted by defining threshold & mask smaller values\n",
+    "            if ax == 0:\n",
+    "                threshold = fft_sorted[k, :]\n",
+    "            else:\n",
+    "                threshold = fft_sorted[:, k]\n",
+    "\n",
+    "            mask = np.abs(fft)>threshold\n",
+    "            masked = fft * mask\n",
+    "            newdata = np.fft.ifft(masked).real\n",
+    "\n",
+    "            # Add squared differences to total sum, update min/max values for later\n",
+    "            diff1D = data - newdata\n",
+    "            sum_of_squares1D += np.sum(diff1D**2)\n",
+    "            if np.max(diff1D) > max1D:\n",
+    "                max1D = np.max(diff1D)\n",
+    "            if np.min(diff1D) < min1D:\n",
+    "                min1D = np.min(diff1D)\n",
+    "\n",
+    "        # Compute RMSE's and CR's, add to dataframe\n",
+    "        range1D = max1D - min1D\n",
+    "        rms1D = np.sqrt(sum_of_squares1D / (101*227*201))\n",
+    "        rmse1D = rms1D / (100*range1D)\n",
+    "        cr1D = data.shape[ax] / k\n",
+    "        cr_string1D = \"CR1D_k=\" + str(k) + \"_ax=\" + str(ax)\n",
+    "        rmse_string1D = \"RMSE1D_k=\" + str(k) + \"_ax=\" + str(ax)\n",
+    "        df.at[0, cr_string1D] = cr1D\n",
+    "        df.at[0, rmse_string1D] = rmse1D\n",
+    "    =\n",
+    "\n",
+    "    # Compute 2D FFTs\n",
+    "    max2D, min2D = -1000, 1000\n",
+    "    sum_of_squares2D = 0\n",
     "    \n",
     "    for i in range(201):\n",
     "        data = phi[:,:,i]\n",
-    "\n",
-    "        # Compute 1D (in r) and 2D FFT's\n",
-    "        fft = np.fft.fft(data, axis=0)\n",
     "        fft2 = np.fft.fft2(data)\n",
-    "\n",
-    "        # 1D\n",
-    "        # Sort fft by absolute value in descending order\n",
-    "        fft_sorted = np.sort(np.abs(fft.reshape(-1)))[::-1]\n",
-    "        \n",
-    "        # Take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
-    "        threshold = fft_sorted[k]\n",
-    "        mask = np.abs(fft)>threshold\n",
-    "        masked = fft * mask\n",
-    "\n",
-    "        # Reconstruct the data from masked using inverse FFT\n",
-    "        newdata = np.fft.ifft(masked).real\n",
-    "        \n",
-    "        # Add squared differences to total sum, update min/max values for later\n",
-    "        diff1D = data - newdata\n",
-    "        sum_of_squares1D += np.sum(diff1D**2)\n",
-    "        if np.max(diff1D) > max1D:\n",
-    "            max1D = np.max(diff1D)\n",
-    "        if np.min(diff1D) < min1D:\n",
-    "            min1D = np.min(diff1D)\n",
-    "\n",
-    "        # 2D\n",
+    "            \n",
     "        # Sort fft by absolute value in descending order\n",
     "        fft2_sorted = np.sort(np.abs(fft2.reshape(-1)))[::-1]\n",
-    "\n",
+    "    \n",
     "        # Take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
     "        threshold2 = fft2_sorted[k]\n",
     "        mask2 = np.abs(fft2)>threshold2\n",
@@ -236,16 +248,6 @@
     "        if np.min(diff2D) < min2D:\n",
     "            min2D = np.min(diff2D)\n",
     "\n",
-    "    # Compute RMSE's and CR's of 1D and 2D cases, add to dataframe\n",
-    "    range1D = max1D - min1D\n",
-    "    rms1D = np.sqrt(sum_of_squares1D / (101*227*201))\n",
-    "    rmse1D = rms1D / (100*range1D)\n",
-    "    cr1D = 101 / k\n",
-    "    cr_string1D = \"CR1D_k=\" + str(k)\n",
-    "    rmse_string1D = \"RMSE1D_k=\" + str(k)\n",
-    "    df.at[0, cr_string1D] = cr1D\n",
-    "    df.at[0, rmse_string1D] = rmse1D\n",
-    "\n",
     "    range2D = max2D - min2D\n",
     "    rms2D = np.sqrt(sum_of_squares2D / (101*227*201))\n",
     "    rmse2D = rms2D / (100*range2D)\n",
@@ -257,6 +259,58 @@
     "        \n",
     "df.to_pickle(\"analysis2.4.pkl\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a910b33c-ca35-4b01-9c4f-418548c0b8a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Debugging: Plotting images for k=1 and k=2 2D FFTs\n",
+    "\n",
+    "# Ranking FFT frequencies based on absolute value (sqrt(a^2+b^2))\n",
+    "\n",
+    "phi = np.load(\"Phi_201snap.npy\")\n",
+    "df = pd.DataFrame()\n",
+    "i = 160\n",
+    "my_dpi = 192\n",
+    "\n",
+    "# Define values for k\n",
+    "k_values = [1, 2]\n",
+    "data = phi[:,:,i]\n",
+    "\n",
+    "plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
+    "plt.imshow(data)\n",
+    "plt.axis(\"off\")\n",
+    "plt.savefig('2.4.png', bbox_inches='tight', pad_inches=0)\n",
+    "plt.close()\n",
+    "\n",
+    "# Compute 1D (in r) and 2D FFT's\n",
+    "\n",
+    "\n",
+    "for k in k_values:\n",
+    "    \n",
+    "    # 2D\n",
+    "    # Sort by absolute value in descending order\n",
+    "    fft2 = np.fft.fft2(data)\n",
+    "    fft2_sorted = np.sort(np.abs(fft2.reshape(-1)))[::-1]\n",
+    "\n",
+    "    # Take the top k frequencies from fft_sorted by defining threshold & mask smaller values\n",
+    "    threshold2 = fft2_sorted[k]\n",
+    "    mask2 = np.abs(fft2)>threshold2\n",
+    "    masked2 = fft2 * mask2\n",
+    "    \n",
+    "    # Reconstruct the data from masked2 using inverse FFT2\n",
+    "    newdata2 = np.fft.ifft2(masked2).real\n",
+    "    title = '2.4k=' + str(k) + '.png'\n",
+    "\n",
+    "    plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
+    "    plt.imshow(newdata2)\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.savefig(title, bbox_inches='tight', pad_inches=0)\n",
+    "    plt.close()"
    ]
   },
   {
@@ -361,7 +415,7 @@
     }
    ],
    "source": [
-    "# Ranking frequencies based on absolute value of real part\n",
+    "# Ranking frequencies based on absolute value of real part (not updated to include 1D FFT in both directions)\n",
     "\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
     "df = pd.DataFrame()\n",
