Successfully debugged analysis2.4?

--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "id": "9b491d61-c4b6-4039-88b8-eb13c342b923",
    "metadata": {},
    "outputs": [],
@@ -14,22 +14,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "id": "d23441a2-ead8-438e-8467-bd2da8915910",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with remapped shapes [original->remapped]: (101,)  and requested shape (101,227)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[55], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m     threshold \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mbroadcast_to(fft_sorted[k, :], (\u001b[38;5;241m101\u001b[39m,\u001b[38;5;241m227\u001b[39m))\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 27\u001b[0m     threshold \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbroadcast_to\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfft_sorted\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m101\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m227\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m mask \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mabs(fft)\u001b[38;5;241m>\u001b[39mthreshold\n\u001b[1;32m     30\u001b[0m masked \u001b[38;5;241m=\u001b[39m fft \u001b[38;5;241m*\u001b[39m mask\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/numpy/lib/stride_tricks.py:413\u001b[0m, in \u001b[0;36mbroadcast_to\u001b[0;34m(array, shape, subok)\u001b[0m\n\u001b[1;32m    367\u001b[0m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_broadcast_to_dispatcher, module\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnumpy\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    368\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbroadcast_to\u001b[39m(array, shape, subok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m    369\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Broadcast an array to a new shape.\u001b[39;00m\n\u001b[1;32m    370\u001b[0m \n\u001b[1;32m    371\u001b[0m \u001b[38;5;124;03m    Parameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    411\u001b[0m \u001b[38;5;124;03m           [1, 2, 3]])\u001b[39;00m\n\u001b[1;32m    412\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 413\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_broadcast_to\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msubok\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreadonly\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/numpy/lib/stride_tricks.py:349\u001b[0m, in \u001b[0;36m_broadcast_to\u001b[0;34m(array, shape, subok, readonly)\u001b[0m\n\u001b[1;32m    346\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mall elements of broadcast shape must be non-\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    347\u001b[0m                      \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnegative\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    348\u001b[0m extras \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m--> 349\u001b[0m it \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnditer\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    350\u001b[0m \u001b[43m    \u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflags\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmulti_index\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrefs_ok\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mzerosize_ok\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mextras\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    351\u001b[0m \u001b[43m    \u001b[49m\u001b[43mop_flags\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mreadonly\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mitershape\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mC\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    352\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m it:\n\u001b[1;32m    353\u001b[0m     \u001b[38;5;66;03m# never really has writebackifcopy semantics\u001b[39;00m\n\u001b[1;32m    354\u001b[0m     broadcast \u001b[38;5;241m=\u001b[39m it\u001b[38;5;241m.\u001b[39mitviews[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with remapped shapes [original->remapped]: (101,)  and requested shape (101,227)"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CR1D_k=1_ax=0</th>\n",
+       "      <th>RMSE1D_k=1_ax=0</th>\n",
+       "      <th>CR1D_k=1_ax=1</th>\n",
+       "      <th>RMSE1D_k=1_ax=1</th>\n",
+       "      <th>CR2D_k=1</th>\n",
+       "      <th>RMSE2D_k=1</th>\n",
+       "      <th>CR1D_k=2_ax=0</th>\n",
+       "      <th>RMSE1D_k=2_ax=0</th>\n",
+       "      <th>CR1D_k=2_ax=1</th>\n",
+       "      <th>RMSE1D_k=2_ax=1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CR1D_k=75_ax=1</th>\n",
+       "      <th>RMSE1D_k=75_ax=1</th>\n",
+       "      <th>CR2D_k=75</th>\n",
+       "      <th>RMSE2D_k=75</th>\n",
+       "      <th>CR1D_k=100_ax=0</th>\n",
+       "      <th>RMSE1D_k=100_ax=0</th>\n",
+       "      <th>CR1D_k=100_ax=1</th>\n",
+       "      <th>RMSE1D_k=100_ax=1</th>\n",
+       "      <th>CR2D_k=100</th>\n",
+       "      <th>RMSE2D_k=100</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101.0</td>\n",
+       "      <td>0.000027</td>\n",
+       "      <td>227.0</td>\n",
+       "      <td>0.00022</td>\n",
+       "      <td>22927.0</td>\n",
+       "      <td>0.000256</td>\n",
+       "      <td>50.5</td>\n",
+       "      <td>0.000026</td>\n",
+       "      <td>113.5</td>\n",
+       "      <td>0.00016</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.026667</td>\n",
+       "      <td>0.000037</td>\n",
+       "      <td>305.693333</td>\n",
+       "      <td>0.000158</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>0.000022</td>\n",
+       "      <td>2.27</td>\n",
+       "      <td>0.000037</td>\n",
+       "      <td>229.27</td>\n",
+       "      <td>0.000145</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 48 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CR1D_k=1_ax=0  RMSE1D_k=1_ax=0  CR1D_k=1_ax=1  RMSE1D_k=1_ax=1  CR2D_k=1  \\\n",
+       "0          101.0         0.000027          227.0          0.00022   22927.0   \n",
+       "\n",
+       "   RMSE2D_k=1  CR1D_k=2_ax=0  RMSE1D_k=2_ax=0  CR1D_k=2_ax=1  RMSE1D_k=2_ax=1  \\\n",
+       "0    0.000256           50.5         0.000026          113.5          0.00016   \n",
+       "\n",
+       "   ...  CR1D_k=75_ax=1  RMSE1D_k=75_ax=1   CR2D_k=75  RMSE2D_k=75  \\\n",
+       "0  ...        3.026667          0.000037  305.693333     0.000158   \n",
+       "\n",
+       "   CR1D_k=100_ax=0  RMSE1D_k=100_ax=0  CR1D_k=100_ax=1  RMSE1D_k=100_ax=1  \\\n",
+       "0             1.01           0.000022             2.27           0.000037   \n",
+       "\n",
+       "   CR2D_k=100  RMSE2D_k=100  \n",
+       "0      229.27      0.000145  \n",
+       "\n",
+       "[1 rows x 48 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -57,9 +141,9 @@
     "\n",
     "            # Take the top k frequencies from each row/col of fft_sorted by defining threshold & mask smaller values\n",
     "            if ax == 0:\n",
-    "                threshold = np.broadcast_to(fft_sorted[k, :], (101,227))\n",
+    "                threshold = fft_sorted[k, :]\n",
     "            else:\n",
-    "                threshold = np.broadcast_to(fft_sorted[:, k], (101,227))\n",
+    "                threshold = fft_sorted[:, k].reshape(101, 1)\n",
     "\n",
     "            mask = np.abs(fft)>threshold\n",
     "            masked = fft * mask\n",
@@ -123,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "id": "c57414f2-bc9d-493e-a5dc-742b0d076a0b",
    "metadata": {},
    "outputs": [
@@ -131,35 +215,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.55219838 0.87660052 0.13372331 0.61086715 0.92261852]\n",
-      " [0.72858849 0.02560191 0.70417905 0.58803215 0.75963716]\n",
-      " [0.82697364 0.26805751 0.67758565 0.20755994 0.89656665]\n",
-      " [0.54709617 0.7875072  0.61626007 0.17518383 0.28589396]\n",
-      " [0.39352915 0.30652548 0.6782991  0.64481577 0.25331075]]\n",
-      "[[0.39672285 0.20917976 0.48151326 0.98455156 0.38632885]\n",
-      " [0.39672285 0.20917976 0.48151326 0.98455156 0.38632885]\n",
-      " [0.39672285 0.20917976 0.48151326 0.98455156 0.38632885]\n",
-      " [0.39672285 0.20917976 0.48151326 0.98455156 0.38632885]\n",
-      " [0.39672285 0.20917976 0.48151326 0.98455156 0.38632885]]\n",
-      "[[ True  True False False  True]\n",
-      " [ True False  True False  True]\n",
-      " [ True  True  True False  True]\n",
-      " [ True  True  True False False]\n",
-      " [False  True  True False False]]\n",
-      "[[0.55219838 0.87660052 0.         0.         0.92261852]\n",
-      " [0.72858849 0.         0.70417905 0.         0.75963716]\n",
-      " [0.82697364 0.26805751 0.67758565 0.         0.89656665]\n",
-      " [0.54709617 0.7875072  0.61626007 0.         0.        ]\n",
-      " [0.         0.30652548 0.6782991  0.         0.        ]]\n"
+      "[[0.25121539 0.91447122 0.25249489]\n",
+      " [0.55896688 0.37015521 0.59874647]\n",
+      " [0.62688222 0.16614882 0.17012063]\n",
+      " [0.87496513 0.67836168 0.89027911]\n",
+      " [0.60853351 0.74130726 0.23693897]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.13372331, 0.70417905, 0.67758565, 0.61626007, 0.6782991 ])"
+       "array([0.91447122, 0.37015521, 0.16614882, 0.67836168, 0.74130726])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,16 +242,9 @@
     "# print(sort)\n",
     "# print(sortflipped)\n",
     "\n",
-    "test = np.random.rand(5,5)\n",
-    "threshold = np.random.rand(1, 5)\n",
-    "threshold = np.broadcast_to(threshold, (5, 5))\n",
-    "mask = test>threshold\n",
-    "masked = test*mask\n",
+    "test = np.random.rand(5,3)\n",
     "print(test)\n",
-    "print(threshold)\n",
-    "print(mask)\n",
-    "print(masked)\n",
-    "test[:, 2]"
+    "test[:, 1]"
    ]
   },
   {
