Add in CR/RMSE means to analysis2.1 and 2.2 plots

--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "id": "d23441a2-ead8-438e-8467-bd2da8915910",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "[1 rows x 48 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,10 +152,8 @@
     "            # Add squared differences to total sum, update min/max values for later\n",
     "            diff1D = data - newdata\n",
     "            sum_of_squares1D += np.sum(diff1D**2)\n",
-    "            if np.max(diff1D) > max1D:\n",
-    "                max1D = np.max(diff1D)\n",
-    "            if np.min(diff1D) < min1D:\n",
-    "                min1D = np.min(diff1D)\n",
+    "            max1D = max(max1D, np.max(diff1D))\n",
+    "            min1D = min(min1D, np.min(diff1D))\n",
     "\n",
     "        # Compute RMSE's and CR's, add to dataframe\n",
     "        range1D = max1D - min1D\n",
@@ -187,10 +185,8 @@
     "        # Add squared differences to total sum, update min/max values for later\n",
     "        diff2D = data - newdata2\n",
     "        sum_of_squares2D += np.sum(diff2D**2)\n",
-    "        if np.max(diff2D) > max2D:\n",
-    "            max2D = np.max(diff2D)\n",
-    "        if np.min(diff2D) < min2D:\n",
-    "            min2D = np.min(diff2D)\n",
+    "        max2D = max(max2D, np.max(diff2D))\n",
+    "        min2D = min(min2D, np.min(diff2D))\n",
     "\n",
     "    range2D = max2D - min2D\n",
     "    rms2D = np.sqrt(sum_of_squares2D / (101*227*201))\n",
@@ -207,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "id": "c57414f2-bc9d-493e-a5dc-742b0d076a0b",
    "metadata": {},
    "outputs": [
@@ -215,20 +211,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.25121539 0.91447122 0.25249489]\n",
-      " [0.55896688 0.37015521 0.59874647]\n",
-      " [0.62688222 0.16614882 0.17012063]\n",
-      " [0.87496513 0.67836168 0.89027911]\n",
-      " [0.60853351 0.74130726 0.23693897]]\n"
+      "[[0.3577727  0.39081675 0.98049294]\n",
+      " [0.68183892 0.4812064  0.67377119]\n",
+      " [0.66811415 0.36795265 0.57007978]\n",
+      " [0.03092792 0.38152779 0.62178179]\n",
+      " [0.69190498 0.23254899 0.42479153]]\n",
+      "[[0.44221907]\n",
+      " [0.17981336]\n",
+      " [0.24669232]\n",
+      " [0.82597427]\n",
+      " [0.18928009]]\n",
+      "[[False False  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [False False False]\n",
+      " [ True  True  True]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.91447122, 0.37015521, 0.16614882, 0.67836168, 0.74130726])"
+       "array([0.39081675, 0.4812064 , 0.36795265, 0.38152779, 0.23254899])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +249,12 @@
     "# print(sortflipped)\n",
     "\n",
     "test = np.random.rand(5,3)\n",
+    "thresh = np.random.rand(5,1)\n",
     "print(test)\n",
+    "print(thresh)\n",
+    "mask = test>thresh\n",
+    "masked = test*mask\n",
+    "print(mask)\n",
     "test[:, 1]"
    ]
   },
