--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "id": "9b491d61-c4b6-4039-88b8-eb13c342b923",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "d23441a2-ead8-438e-8467-bd2da8915910",
    "metadata": {},
    "outputs": [
@@ -45,21 +45,6 @@
        "      <th>RMSE1D_k=1_ax=1</th>\n",
        "      <th>CR2D_k=1</th>\n",
        "      <th>RMSE2D_k=1</th>\n",
-       "      <th>CR1D_k=2_ax=0</th>\n",
-       "      <th>RMSE1D_k=2_ax=0</th>\n",
-       "      <th>CR1D_k=2_ax=1</th>\n",
-       "      <th>RMSE1D_k=2_ax=1</th>\n",
-       "      <th>...</th>\n",
-       "      <th>CR1D_k=75_ax=1</th>\n",
-       "      <th>RMSE1D_k=75_ax=1</th>\n",
-       "      <th>CR2D_k=75</th>\n",
-       "      <th>RMSE2D_k=75</th>\n",
-       "      <th>CR1D_k=100_ax=0</th>\n",
-       "      <th>RMSE1D_k=100_ax=0</th>\n",
-       "      <th>CR1D_k=100_ax=1</th>\n",
-       "      <th>RMSE1D_k=100_ax=1</th>\n",
-       "      <th>CR2D_k=100</th>\n",
-       "      <th>RMSE2D_k=100</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -71,47 +56,20 @@
        "      <td>0.00022</td>\n",
        "      <td>22927.0</td>\n",
        "      <td>0.000256</td>\n",
-       "      <td>50.5</td>\n",
-       "      <td>0.000026</td>\n",
-       "      <td>113.5</td>\n",
-       "      <td>0.00016</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.026667</td>\n",
-       "      <td>0.000037</td>\n",
-       "      <td>305.693333</td>\n",
-       "      <td>0.000158</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>0.000022</td>\n",
-       "      <td>2.27</td>\n",
-       "      <td>0.000037</td>\n",
-       "      <td>229.27</td>\n",
-       "      <td>0.000145</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   CR1D_k=1_ax=0  RMSE1D_k=1_ax=0  CR1D_k=1_ax=1  RMSE1D_k=1_ax=1  CR2D_k=1  \\\n",
        "0          101.0         0.000027          227.0          0.00022   22927.0   \n",
        "\n",
-       "   RMSE2D_k=1  CR1D_k=2_ax=0  RMSE1D_k=2_ax=0  CR1D_k=2_ax=1  RMSE1D_k=2_ax=1  \\\n",
-       "0    0.000256           50.5         0.000026          113.5          0.00016   \n",
-       "\n",
-       "   ...  CR1D_k=75_ax=1  RMSE1D_k=75_ax=1   CR2D_k=75  RMSE2D_k=75  \\\n",
-       "0  ...        3.026667          0.000037  305.693333     0.000158   \n",
-       "\n",
-       "   CR1D_k=100_ax=0  RMSE1D_k=100_ax=0  CR1D_k=100_ax=1  RMSE1D_k=100_ax=1  \\\n",
-       "0             1.01           0.000022             2.27           0.000037   \n",
-       "\n",
-       "   CR2D_k=100  RMSE2D_k=100  \n",
-       "0      229.27      0.000145  \n",
-       "\n",
-       "[1 rows x 48 columns]"
+       "   RMSE2D_k=1  \n",
+       "0    0.000256  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +81,7 @@
     "df = pd.DataFrame()\n",
     "\n",
     "# Define values for k\n",
-    "k_values = [1, 2, 5, 10, 20, 50, 75, 100]\n",
+    "k_values = [1]\n",
     "\n",
     "for k in k_values:\n",
     "\n",
@@ -140,11 +98,11 @@
     "            fft_sorted = np.flip(np.sort(np.abs(fft), axis=ax), axis=ax)\n",
     "\n",
     "            # Take the top k frequencies from each row/col of fft_sorted by defining threshold & mask smaller values\n",
-    "            if ax == 0:\n",
+    "            if ax == 0: # if FFT is along r \n",
     "                threshold = fft_sorted[k, :]\n",
-    "            else:\n",
+    "            else:       # if FFT is along z\n",
     "                threshold = fft_sorted[:, k].reshape(101, 1)\n",
-    "\n",
+    "        \n",
     "            mask = np.abs(fft)>threshold\n",
     "            masked = fft * mask\n",
     "            newdata = np.fft.ifft(masked).real\n",
