--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d23441a2-ead8-438e-8467-bd2da8915910",
    "metadata": {},
    "outputs": [
@@ -45,31 +45,73 @@
        "      <th>RMSE1D_k=1_ax=1</th>\n",
        "      <th>CR2D_k=1</th>\n",
        "      <th>RMSE2D_k=1</th>\n",
+       "      <th>CR1D_k=2_ax=0</th>\n",
+       "      <th>RMSE1D_k=2_ax=0</th>\n",
+       "      <th>CR1D_k=2_ax=1</th>\n",
+       "      <th>RMSE1D_k=2_ax=1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CR1D_k=75_ax=1</th>\n",
+       "      <th>RMSE1D_k=75_ax=1</th>\n",
+       "      <th>CR2D_k=75</th>\n",
+       "      <th>RMSE2D_k=75</th>\n",
+       "      <th>CR1D_k=100_ax=0</th>\n",
+       "      <th>RMSE1D_k=100_ax=0</th>\n",
+       "      <th>CR1D_k=100_ax=1</th>\n",
+       "      <th>RMSE1D_k=100_ax=1</th>\n",
+       "      <th>CR2D_k=100</th>\n",
+       "      <th>RMSE2D_k=100</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>101.0</td>\n",
+       "      <td>47.529412</td>\n",
        "      <td>0.000027</td>\n",
-       "      <td>227.0</td>\n",
+       "      <td>106.823529</td>\n",
        "      <td>0.00022</td>\n",
        "      <td>22927.0</td>\n",
        "      <td>0.000256</td>\n",
+       "      <td>23.764706</td>\n",
+       "      <td>0.000026</td>\n",
+       "      <td>53.411765</td>\n",
+       "      <td>0.00016</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.424314</td>\n",
+       "      <td>0.000037</td>\n",
+       "      <td>305.693333</td>\n",
+       "      <td>0.000158</td>\n",
+       "      <td>0.475294</td>\n",
+       "      <td>0.000022</td>\n",
+       "      <td>1.068235</td>\n",
+       "      <td>0.000037</td>\n",
+       "      <td>229.27</td>\n",
+       "      <td>0.000145</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   CR1D_k=1_ax=0  RMSE1D_k=1_ax=0  CR1D_k=1_ax=1  RMSE1D_k=1_ax=1  CR2D_k=1  \\\n",
-       "0          101.0         0.000027          227.0          0.00022   22927.0   \n",
+       "0      47.529412         0.000027     106.823529          0.00022   22927.0   \n",
        "\n",
-       "   RMSE2D_k=1  \n",
-       "0    0.000256  "
+       "   RMSE2D_k=1  CR1D_k=2_ax=0  RMSE1D_k=2_ax=0  CR1D_k=2_ax=1  RMSE1D_k=2_ax=1  \\\n",
+       "0    0.000256      23.764706         0.000026      53.411765          0.00016   \n",
+       "\n",
+       "   ...  CR1D_k=75_ax=1  RMSE1D_k=75_ax=1   CR2D_k=75  RMSE2D_k=75  \\\n",
+       "0  ...        1.424314          0.000037  305.693333     0.000158   \n",
+       "\n",
+       "   CR1D_k=100_ax=0  RMSE1D_k=100_ax=0  CR1D_k=100_ax=1  RMSE1D_k=100_ax=1  \\\n",
+       "0         0.475294           0.000022         1.068235           0.000037   \n",
+       "\n",
+       "   CR2D_k=100  RMSE2D_k=100  \n",
+       "0      229.27      0.000145  \n",
+       "\n",
+       "[1 rows x 48 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +123,7 @@
     "df = pd.DataFrame()\n",
     "\n",
     "# Define values for k\n",
-    "k_values = [1]\n",
+    "k_values = [1, 2, 5, 10, 20, 50, 75, 100]\n",
     "\n",
     "for k in k_values:\n",
     "\n",
@@ -117,7 +159,7 @@
     "        range1D = max1D - min1D\n",
     "        rms1D = np.sqrt(sum_of_squares1D / (101*227*201))\n",
     "        rmse1D = rms1D / (100*range1D)\n",
-    "        cr1D = data.shape[ax] / k\n",
+    "        cr1D = (8*data.shape[ax])/(17*k)\n",
     "        cr_string1D = \"CR1D_k=\" + str(k) + \"_ax=\" + str(ax)\n",
     "        rmse_string1D = \"RMSE1D_k=\" + str(k) + \"_ax=\" + str(ax)\n",
     "        df.at[0, cr_string1D] = cr1D\n",
